[package]
name = "earley"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = "0.4.2"
earley = { git = "https://github.com/MashPlant/earley" }

[profile.release]
lto = true
panic = "abort"